@@ -3,6 +3,7 @@ Revision history for Perl extension XML::SemanticDiff.
 0.98  September 13 2008
     - Added the LICENSE section to the POD (Kwalitee).
     - Added the "use warnings" (Kwalitee).
+    - Added the "Repository URL" on the resources page.
 
 0.97  August 08 2007
     - Added the README (Kwalitee)
